<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CaNhan.ChinhSuaThongTin.ChinhSuaThongTin">
    <ScrollView
        android:layout_marginTop="100sp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/progress_bar"
                android:layout_marginBottom="10sp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </ProgressBar>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/updating"/>
            </LinearLayout>
            <androidx.cardview.widget.CardView
                android:layout_margin="5sp"
                app:cardCornerRadius="100sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/img_anh_chinh_sua"
                    android:layout_width="150sp"
                    android:layout_height="150sp"
                    android:src="@drawable/ic_baseline_person_outline_24"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:id="@+id/tv_edit_loai_tai_khoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_edit_url_anh_dai_dien"
                android:maxLines="1"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputLayout
                android:padding="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_ten_nguoi_dung"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_baseline_person_24"
                    android:hint="@string/user_name"
                    android:padding="5sp"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="75sp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:minWidth="350dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:padding="5sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:enabled="false"
                    android:id="@+id/edit_email"
                    android:gravity="center_vertical"
                    android:drawableLeft="@drawable/ic_baseline_mail_24"
                    android:hint="@string/emai"
                    android:padding="5sp"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="75sp"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress|textNoSuggestions"
                    android:minWidth="350dp" />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    app:cardCornerRadius="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/bt_huy"
                        android:drawableEnd="@drawable/ic_baseline_signout_24"
                        android:padding="2sp"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:background="@color/gray_600"
                        android:text="@string/cancel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    android:layout_marginLeft="20sp"
                    android:layout_marginRight="20sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    app:cardCornerRadius="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/bt_luu"
                        android:drawableEnd="@drawable/ic_baseline_signout_24"
                        android:padding="2sp"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:background="@color/teal_200"
                        android:text="@string/save"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>