<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ThongTinTruyen.Fragment_tool_comment_rate">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        app:cardCornerRadius="50sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="75sp"
            android:padding="10sp">

            <RatingBar
                android:id="@+id/ratingBar_com_rate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="15sp"
                android:layout_weight="2"
                android:numStars="5"
                android:stepSize="0.5"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15sp"
                android:layout_weight="8"
                app:cardCornerRadius="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/bt_sent_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/teal_200"
                    android:gravity="center"
                    android:maxLines="1"
                    android:padding="5sp"
                    android:text="@string/sent_a_rate"
                    android:textColor="@color/white" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10sp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:weightSum="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        tools:layout_editor_absoluteX="10dp">

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="110sp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/content"
            android:imeOptions="actionNext"
            android:maxLines="5"
            android:minWidth="350dp"
            android:padding="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            app:cardCornerRadius="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/bt_gui_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:gravity="center"
                android:padding="5sp"
                android:text="@string/sent_a_comment"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>